# PrivateSublimeSettings

./: .gitignore
Anaconda/: .tags  .tags_sorted_by_file  package-metadata.json
AutoSelect/: autoselect.py  package-metadata.json
BracketHighlighter/: bh_core.py
BufferScroll/: BufferScroll.py
C Improved/: C Improved.sublime-syntax  package-metadata.json
CTags/: ctagsplugin.py  package-metadata.json
Clang-Complete/: .tags  .tags_sorted_by_file  CMakeLists.txt  cc.py  cc.sublime-settings  macros.cmake  st_cc.py
Clang-Complete/lib/include/clang-c/: .tags  .tags_sorted_by_file
Clang-Complete/src/: .tags  .tags_sorted_by_file  CMakeLists.txt  cc_result.c  cc_symbol.c  cc_symbol.h  main.c  py_bind.c
Clickable URLs/: clickable_urls.py
Color Highlighter/: ColorHighlighter.py
ColorPicker/: package-metadata.json
ConvertToUTF8/: ConvertToUTF8.py  package-metadata.json
CppByStorm/: CppByStorm.sublime-syntax
FavoriteFiles/: .tags  .tags_sorted_by_file  favorite_files.py  favorites.py  package-metadata.json
Gulp/: package-metadata.json
MarkdownEditing/: package-metadata.json
PackageResourceViewer/: package_resource_viewer.py
Pretty JSON/: Default (Windows).sublime-keymap  package-metadata.json
Python Improved/: package-metadata.json
Pywin32/: package-metadata.json
ScopeHunter/: scope_hunter.py
SideBarEnhancements/: SideBar.py  SideBarAPI.py
Sublime Bookmarks/: .tags  .tags_sorted_by_file  bookmark.py  bookmarkWatcher.py  package-metadata.json  sublimebookmark.py
Sublime Text 3 Snippets/: package-metadata.json
SublimeCodeIntel/: .tags  .tags_sorted_by_file  package-metadata.json
SublimeLinter/: .tags  .tags_sorted_by_file  commands.py  package-metadata.json  sublimelinter.py
SublimeLinter-contrib-eslint/: package-metadata.json
SublimeStorm-DPalette/: .tags  .tags_sorted_by_file  001094b5-4bd7-4ff1-9810-42ea701d0413.dmp  Default (Windows).sublime-keymap  README.md  RunShellCmd.sublime-settings  StormErrorPanel.py  StormErrorPanel.sublime-settings  StormErrorPanel.sublime-syntax  StormOutputView.py  StormOutputView.sublime-settings  StormOutputView.sublime-syntax  a71a9e4a-b4e2-4a32-b9f8-c0e5aa07d28e.dmp  clipboard_palette.sublime-settings  cmd_clipboard_palette.py  cmd_eval.py  cmd_run.py  cmd_run_shell.py  cmd_search_ref.py  cmd_search_ref_palette.py  cmd_snippet_base.py  cmd_storm_palette.py  dependencies.json  package-metadata.json  panel_asset_base.py  record_base.py  search_ref_palette.sublime-settings  storm_palette.sublime-settings
SublimeStorm-Dep/: README.md  dependency-metadata.json
SublimeStorm-Dep-Utils/: .tags  .tags_sorted_by_file  README.md  dependency-metadata.json
Terminal/: package-metadata.json
TypeScript/: Default (Windows).sublime-keymap  TypeScript.sublime-syntax  TypeScriptOrg.tmLanguage  package-metadata.json
User/: .gitignore  .tags  .tags_sorted_by_file  Anaconda.sublime-settings  ApplySyntax.ext-list  ApplySyntax.sublime-settings  Base File.sublime-settings  BufferScroll.sublime-settings  C++11.sublime-settings  CMakeByStorm.sublime-settings  CTags.sublime-settings  ColorHighlighter.sublime-settings  Context.sublime-menu  CppByStorm.sublime-settings  Default (Windows).sublime-keymap  Default (Windows).sublime-mousemap  Default.sublime-keymap  Emmet.sublime-settings  FileDiffs.sublime-settings  FileHistory.json  FileHistory_20160127.json  FileHistory_20160128.json  FileHistory_20160129.json  FileHistory_20160130.json  FileHistory_20160131.json  FilesystemAutocompletion.sublime-settings  Git.sublime-settings  INI.sublime-settings  JSON.sublime-settings  JSONByStorm.sublime-settings  Markdown.sublime-settings  Oasis.tmTheme  Package Bundler.sublime-settings  Package Control.last-run  Package Control.merged-ca-bundle  Package Control.sublime-settings  Package Control.system-ca-bundle  Preferences.sublime-settings  Pretty YAML.sublime-settings  PythonByStorm.sublime-settings  (+23 more)
UserAutoCompletion/: CppAutoCompletionByStormCommand.py  clang.rar
UserC++AutoCompletion/: StormCppAutoCompletionCommand.py
UserCpp/: Default (Windows).sublime-keymap
UserCustomIDE/: zideCmdArg.sublime-snippet  zideCtx.sublime-snippet  zideMulrun.sublime-snippet  zide_CmdArg.sublime-snippet  zide_Ctx.sublime-snippet  zide_Mulrun.sublime-snippet
UserDebug/: Default (Windows).sublime-keymap
UserEasyInvoker/: InvokeKeyDict.py  InvokerLoader.py  easyInvoker.invokeKey.json  easy_invoke.py
UserFixZipBrowser/: Main.sublime-menu  Zip Browser.py
UserGoto/: Default (Windows).sublime-keymap
UserHelp/: clang_BlockCommandComment_getArgText  main.todo  openSource.todo  tip.todo  tmp
UserJavascript/: Default (Windows).sublime-keymap  TypeScript.sublime-syntax
UserJsonEdit/: Default (Windows).sublime-keymap
UserLinter/: Default (Windows).sublime-keymap  pylint.message  pylint.rc  tslint.json
UserPlugins/: .build  .tags  .tags_sorted_by_file  AutoEscapeCommand.py  Default (Windows).sublime-keymap  ErrorPanel.py  ExpandBothSideSelCommand.py  ExpandSelBySideCommand.py  IndentSpaceChangeCommand.py  ListCurrentDirCommand.py  RunShellCommand.py  StormErrorPanel.py  StormErrorPanel.sublime-settings  StormErrorPanel.sublime-syntax  Test.py  UserPlugins.sublime-project  UserPlugins.sublime-settings  __init__.py  another_palette.sublime-settings  cmd_another_palette.py  cmd_eval.py  cmd_list_current_dir.py  cmd_mouse_simpulate.plan  cmd_mul_run.py  cmd_mul_run_window.py  cmd_run.py  cmd_selection.py  cmd_simple_transform.py  hello.py  indentOnOpen.py  listCurrentDir.py  mulRunCommand.py  mulRunWindowCommand.py  pickScopeNameCommand.py  tests_MUtils_Basic.py
UserPython/: Default (Windows).sublime-keymap
UserSimplePlugins/: .tags  .tags_sorted_by_file  __init__.py  cmd_goto_file.py  cmd_indent_space_change.py  cmd_select_to_anchor.py  cmd_selection.py  cmd_to_single_line.py
UserSmartCaret/: Default (Windows).sublime-keymap
UserSmartCopyPaste/: Default (Windows).sublime-keymap
UserSmartEnter/: Default (Windows).sublime-keymap
UserSmartSemiColon/: Default (Windows).sublime-keymap
UserSmartSimpleEdit/: Default (Windows).sublime-keymap
(+132 files in other folders)
